[test] Fix test failure of testParticipantStoreKill caused by recent change of AbstractVeniceStats and spotbugs issue.
Previous change 4d2a1abe will replace "." to "_" in stats name passed into AbstractVeniceStats constructor to ensure Tahuti is able to parse metric name by "."
It will break the metric checking in testParticipantStoreKill. This rb is to correct the metric name.

Bonus: fix two spotbugs issue.

RB=3152132
G=voldemort-reviewers
R=nithakka,lcli,sdwu,anaberez,lelu,mnhuang,xnma,akozma,adietz,jlliu,goliu,zpolicze,ssen,smaji,shuhliu,yurzhou,fvillega,xyin,sumane
A=jlliu